02-infra/wave-50-repos/54-nexus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  annotations:
    argocd.argoproj.io/sync-wave: "54"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec: {}
