02-infra/wave-50-repos/54-nexus/service-nexus-registry.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: docker-nexus3
    app.kubernetes.io/instance: nexus
  name: nexus-registry
  namespace: nexus
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  sessionAffinity: ClientIP
  selector:
    app: docker-nexus3
  type: ClusterIP
