02-infra/wave-50-repos/54-nexus/service-nexus-web.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: docker-nexus3
  name: nexus-web
  namespace: nexus
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: docker-nexus3
  sessionAffinity: ClientIP
  type: ClusterIP
