02-infra/wave-50-repos/54-nexus/route-nexus-registry.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: docker-nexus3
    app.kubernetes.io/instance: nexus
  name: nexus-registry
  namespace: nexus
spec:
  host: "nexus.apps.rosa.<path:secret/data/rosa-domain#domain>"
  port:
    targetPort: 5000-tcp
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: nexus-registry
    weight: 100
  wildcardPolicy: None
