02-infra/wave-50-repos/54-nexus/route-nexus-web.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: docker-nexus3
    app.kubernetes.io/instance: nexus-web
  name: nexus-web
  namespace: nexus
spec:
  host: "nexus-web.<path:secret/data/rosa-domain#domain>"
  port:
    targetPort: 8081-tcp
  tls:
    insecureEdgeTerminationPolicy: None
    termination: edge
  to:
    kind: Service
    name: nexus-web
    weight: 100
  wildcardPolicy: None
